# Flow-Works-Engine-FWE

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  material_submission.yml
.github/workflows/: build.yml
docs/: architecture.md  commercial-license.md
docs/formats/: file-format-spec.md
src/: main.cpp
src/core/: FWECore.h
src/nodes/: NodeBase.h
